--- a/index.html
+++ b/index.html
@@ -2956,38 +2956,22 @@ function change(str){
 <tr><td style="text-align:center">2-4 绿宝石</td><td style="text-align:center">金合欢树苗</td></tr>
 <tr><td style="text-align:center">2-4 绿宝石</td><td style="text-align:center">深色橡木树苗</td></tr>
 
-<tr><th rowspan="32"><img src="items/villager/painter.png" style="height:100px;"/></th><th rowspan="32">书画师</th><th rowspan="3">1</th><td style="text-align:center">24-36 纸</td><td style="text-align:center">绿宝石</td></tr>
+<tr><th rowspan="4"><img src="items/villager/painter.png" style="height:100px;"/></th><th rowspan="4">书画师</th><th rowspan="3">1</th><td style="text-align:center">24-36 纸</td><td style="text-align:center">绿宝石</td></tr>
 <tr><td style="text-align:center">36-40 玫瑰红</td><td style="text-align:center">绿宝石</td></tr>
 <tr><td style="text-align:center">36-40 墨囊</td><td style="text-align:center">绿宝石</td></tr>
-<tr><th rowspan="29">2</th><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">TCP 图标</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">日出江花红胜火<sup>[1]</sup></td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春来江水绿如蓝</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">爆竹声声辞旧岁</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春联户户迎新春</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">一年四季行好运</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">八方财宝进家门</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">迎新春平安如意</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">贺佳节富贵平安</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">旧岁又添几个喜</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">新年更上一层楼</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">绿竹别其三分景</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">红梅正报万家春</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">天增岁月人增寿</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春满乾坤福满楼</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">喜居宝地千年旺</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">福照家门万事兴</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">鸟语花香</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">万象更新</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">四季平安</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">国泰民安</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">辞旧迎新</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春回大地</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">四季长安</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">喜迎新春</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">福</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">五谷丰登</td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">六畜兴旺</td></tr>
+<tr><th rowspan="1">2</th><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">TCP 图标<sup>[1]</sup><br/>
+日出江花红胜火 春来江水绿如蓝<br/>
+爆竹声声辞旧岁 春联户户迎新春<br/>
+一年四季行好运 八方财宝进家门<br/>
+迎新春平安如意 贺佳节富贵平安<br/>
+旧岁又添几个喜 新年更上一层楼<br/>
+绿竹别其三分景 红梅正报万家春<br/>
+天增岁月人增寿 春满乾坤福满楼<br/>
+喜居宝地千年旺 福照家门万事兴<br/>
+鸟语花香 万象更新<br/>
+四季平安 国泰民安<br/>
+辞旧迎新 春回大地<br/>
+四季长安 喜迎新春<br/>春 福 五谷丰登 六畜兴旺</td></tr>
 
 <tr><th style="width:50px;"><img src="items/villager/santa_claus.png" style="height:100px;"/></th><th style="width:70px;">圣诞老人</th><th>-</th><td style="text-align:center">皮革靴子+1-64 绿宝石</td><td style="text-align:center">圣诞礼物<sup>[2]</sup></td></tr>
 
@@ -3038,22 +3022,7 @@ function change(str){
 
 <tr><td colspan="5">
 [1] 对联和横批共8种样式：<br />
-<img src="items/image/scroll8.png" style="height:28px;" />
-<img src="items/image/scroll7.png" style="height:28px;" />
-<img src="items/image/scroll6.png" style="height:28px;" />
-<img src="items/image/scroll5.png" style="height:28px;" />
-<img src="items/image/scroll4.png" style="height:28px;" />
-<img src="items/image/scroll3.png" style="height:28px;" />
-<img src="items/image/scroll2.png" style="height:28px;" />
-<img src="items/image/scroll1.png" style="height:28px;" /><br />
-<img src="items/image/spring_couplets16.png" style="width:56px;" /><img src="items/image/spring_couplets15.png" style="width:56px;" />
-<img src="items/image/spring_couplets14.png" style="width:56px;" /><img src="items/image/spring_couplets13.png" style="width:56px;" />
-<img src="items/image/spring_couplets12.png" style="width:56px;" /><img src="items/image/spring_couplets11.png" style="width:56px;" />
-<img src="items/image/spring_couplets10.png" style="width:56px;" /><img src="items/image/spring_couplets9.png" style="width:56px;" />
-<img src="items/image/spring_couplets8.png" style="width:56px;" /><img src="items/image/spring_couplets7.png" style="width:56px;" />
-<img src="items/image/spring_couplets6.png" style="width:56px;" /><img src="items/image/spring_couplets5.png" style="width:56px;" />
-<img src="items/image/spring_couplets4.png" style="width:56px;" /><img src="items/image/spring_couplets3.png" style="width:56px;" />
-<img src="items/image/spring_couplets2.png" style="width:56px;" /><img src="items/image/spring_couplets1.png" style="width:56px;" /><br />
+<img src="items/image/spring_couplets.png" style="width:1024px;" /><br />
 <img src="items/image/spring.png" style="height:60px;" />
 <img src="items/image/happiness.png" style="height:60px;" />
 <img src="items/image/harvest.png" style="height:60px;" />
