:art: 修改唤魔者和卫道士刷怪蛋的合成配方，修改刷怪笼代码，重写大量代码，移除奖励箱的木制工具，重写了语言文件，羊毛树仅支持桦木并不再产生树叶，升级到18w22c

--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,7 @@ function change(str){
 </span></span></span>
 </td><td>耗时10秒</td></tr>
 
-<tr><th><strong id="cooked_carrot">烤胡萝卜 (Cooked Carrot)</strong><br /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger_half.svg" style="width:18px;height:18px;" title="5" /></th><td>胡萝卜</td><td>
+<tr><th><strong id="baked_carrot">烤胡萝卜 (Baked Carrot)</strong><br /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger_half.svg" style="width:18px;height:18px;" title="5" /></th><td>胡萝卜</td><td>
 <span class="mcui"><span><span class="mcui-row"><span class="carrot" title="胡萝卜">
 </span></span><span class="mcui-row"><span style="width:32px;height:32px;background-image:url(items/smelting.png);border-style:none;background-color:#c6c6c6;"></span></span><span class="mcui-row"><span class="coal" title="燃料"></span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="carrot" title="烤胡萝卜"><span class="enchant">*</span>
