--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html> 
-<!-- saved from url=(0038)https://ruhuasiyu.github.io/craftingpp -->
+<!-- saved from url=(0044)https://ruhuasiyu.github.io/CraftingPlusPlus -->
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
 <title>更多的合成 Crafting++ v1.8</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
-<meta name='keywords' content='minecraft, 原版模组, mod, Crafting++' />
+<meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
 <meta name='revised' content='ruhuasiyu@mcbbs' />
 <base href="" />
@@ -180,8 +180,6 @@ td.original_paintings img{
 	height:32px;
 	background-repeat:no-repeat;
 }
-//.craft tr:nth-child(odd), tr.odd	{background:hsl(126,90%,89%);}
-//.craft tr:nth-child(even),tr.even	{background:hsl(126,80%,95%);}
 table{
 	margin: 20px 0px;
 	background-color:#fff;
@@ -1824,7 +1822,7 @@ function change(str){
 <p>对于工具，每种效果几率为1/2。如果仪式使用的是星之魔杖，则有1/3×2的几率附加一种效果，有1/3的几率附加两种效果。</p>
 <p>盔甲效果在对应槽位生效，剑和工具在主手生效，同时玩家背包需有烈焰粉。海洋之力/水下呼吸仅在水中生效，缓落仅在空中生效，饱和仅在饥饿时生效，生命恢复仅当生命值低于20时生效。可通过<code>/trigger cppMaxHealth set 数值</code>来改变阈值，建议设置为最大生命值。</p>
 <p>多个生命恢复/抗性/幸运效果可提升效果等级。</p>
-<p>生命恢复(2.5秒)每恢复1点生命值、饱和每恢复1点饥饿值、潮涌能量/抗性II每3秒、其余效果每6秒，消耗1点经验值，每隔6秒有1/64几率消耗烈焰粉。连锁无消耗。</p>
+<p>生命恢复(2.5秒)每恢复1点生命值、饱和每恢复1点饥饿值、潮涌能量/抗性II每3秒、其余效果每6秒，消耗1点经验值，每次有1/60几率消耗烈焰粉。连锁无消耗。</p>
 <p>使用<a href="#temperancer">节制器</a>可开启/关闭所有效果。</p>
 <p>连锁钻石斧可一次性破坏相连的树、瓜、成熟的农作物，连锁钻石镐可一次性破坏相连的矿石和黑曜石，连锁钻石锹可一次性8米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
 <p>效果可重新附加，之前的效果将会被覆盖。与属性附加、附魔独立。</p>
@@ -3475,7 +3473,7 @@ $(document).ready(function(){
 </script>
 
 <footer>
-<p><a href="https://ruhuasiyu.github.io/craftingpp/">官网</a> | <a href="https://github.com/ruhuasiyu/CraftingPlusPlus">GitHub</a> | <a href="http://www.mcbbs.net/thread-696861-1-1.html">Mcbbs</a> | <a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">联系作者</a> | 最后更新 2018-03-30</p>
+<p><a href="https://ruhuasiyu.github.io/craftingpp/">官网</a> | <a href="https://github.com/ruhuasiyu/CraftingPlusPlus">GitHub</a> | <a href="http://www.mcbbs.net/thread-696861-1-1.html">Mcbbs</a> | <a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">联系作者</a> | 最后更新 2018-06-09</p>
 </footer>
 <body><html>
 <!--<span class="mcui-icons"><span class="mcui-shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span>
