:art: 改变称号需消耗附魔钻石

--- a/index.html
+++ b/index.html
@@ -2090,7 +2090,7 @@ function change(str){
 
 
 <h3>称号</h3>
-玩家站在钻石块上并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可获得相应称号。
+玩家手持<a onclick="change('machines')" href="#enchanted_diamond">附魔钻石</a>并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可获得相应称号。
 <table class="center">
 <tbody>
 <tr><th></th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>10</th></tr>
