--- a/index.html
+++ b/index.html
@@ -4012,9 +4012,9 @@
 </article>
 
 <footer>
-<p><a href="../">官网</a> | <a href="https://github.com/ruhuasiyu/CraftingPlusPlus">GitHub</a> | <a href="http://www.mcbbs.net/thread-696861-1-1.html">Mcbbs</a> | <a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">联系作者</a> | 最后更新 2018-06-09</p>
+<p><a href="../">官网</a> | <a href="https://github.com/ruhuasiyu/CraftingPlusPlus">GitHub</a> | <a href="http://www.mcbbs.net/thread-696861-1-1.html">Mcbbs</a> | <a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">联系作者</a> | 最后更新 2018-07-27</p>
 </footer>
-<body><html>
+</body></html>
 <!--<span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span>
 lapis 6*2.2=13.2	6*3.14=18.84
 redstone 4.5+f/2=6、7
