--- a/index.html
+++ b/index.html
@@ -73,15 +73,21 @@
 
 本系列模组包括
 <table>
-<thead><tr><th>模组名称</th><th>版本</th><th>下载地址</th><th>内容</th></tr></thead>
+<thead><tr><th>模组名称</th><th>版本</th><th>内容</th></tr></thead>
 <tbody>
-<tr><td>合成器</td><td>crafting_machine 1.0</td><td>尚未发布</td><td>合成器和材质配方更改</td></tr>
-<tr><td>更多的合成</td><td>craftingpp 1.8</td><td>尚未发布</td><td>生物修改|元素之力|机器|工具|饮食|熔炼|酿造|农业|仪式|装饰|原版</td></tr>
-<tr><td>更多的交易</td><td>tradepp 1.1</td><td>尚未发布</td><td>村民交易</td></tr>
-<tr><td>更多实用功能</td><td>utilitypp 1.1</td><td>尚未发布</td><td>自动种植|漂白|随机方块|箱子整理</td></tr>
-<tr><td>台阶加强</td><td>improve_slabs 1.0</td><td>尚未发布</td><td>混合台阶|竖台阶</td></tr>
-<tr><td>空域开端</td><td>block_sky_domain 1.0</td><td>尚未发布</td><td>空岛基础进展</td></tr>
+<tr><td>合成器</td><td>crafting_machine 1.0</td><td>合成器和材质配方更改</td></tr>
+<tr><td>更多的合成</td><td>craftingpp 1.8</td><td>生物修改|元素之力|机器|工具|饮食|熔炼|酿造|农业|仪式|装饰|原版</td></tr>
+<tr><td>更多的交易</td><td>tradepp 1.1</td><td>村民交易</td></tr>
+<tr><td>更多实用功能</td><td>utilitypp 1.1</td><td>自动种植|漂白|随机方块|箱子整理</td></tr>
+<tr><td>台阶加强</td><td>improve_slabs 1.0</td><td>混合台阶|竖台阶</td></tr>
+<tr><td>空域开端</td><td>block_sky_domain 1.0</td><td>空岛基础进展</td></tr>
 </tbody></table>
+<p>下载地址（测试版v1.8-m07d27）：</p>
+<ul>
+<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m07d27.zip">https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m07d27.zip</a></li>
+<li><a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m07d27.zip">http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m07d27.zip</a></li>
+</ul>
+
 
 <h4 id="old_versions">旧版本</h3>
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
