修复世界生成结构的问题 修复鱼的掉落物问题 修复作物杂交几率错误的问题 修复水果和头颅名称错误的问题

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <base href="" />
 <link rel="shortcut icon" href="https://zsx.neocities.org/main/favicon.ico" />
 <link rel="stylesheet" href="items/items_css.css" />
-<script src="items/menuFixed.js"></script>
+<script src="items/menufixed.js"></script>
 </head>
 
 <body onload="main();">
@@ -50,7 +50,7 @@
 
 <p><strong>什么是原版模组？</strong>原版模组一般是指在不修改Minecraft游戏本体的前提下，通过命令方块、ooc或数据包等方式，而非forge或liteloader等api来对游戏的可玩性做出修改。</p>
 
-<p><strong>什么是《更多的合成》？</strong>《更多的合成》是一个大型的原版模组，目前已更新至<em>1.8版本</em>，支持<em>Minecraft Java 1.13</em>。本次更新为<em>元素更新</em>，内容包括：</p>
+<p><strong>什么是《更多的合成》？</strong>《更多的合成》是一个大型的原版模组，目前已更新至<em>1.8版本</em>，支持<em>Minecraft Java 18w30b</em>。本次更新为<em>元素更新</em>，内容包括：</p>
 <ul>
 <li>经验值处理：你可以将经验存储为附魔之瓶，附魔之瓶可用来为你的矿物增产、自动捕鱼、造石造冰、酿药等，甚至可以用来强化你的盔甲和武器；</li>
 <li>十几种实用性的工具，这些工具可以用来：吸取物品、切换时间、切换天气、整地、铺路、祛魔、飞行等；</li>
@@ -78,8 +78,7 @@
 <tr><td>合成器</td><td>crafting_machine 1.0</td><td>合成器和材质配方更改</td></tr>
 <tr><td>更多的合成</td><td>craftingpp 1.8</td><td>生物修改|元素之力|机器|工具|饮食|熔炼|酿造|农业|仪式|装饰|原版</td></tr>
 <tr><td>更多的交易</td><td>tradepp 1.1</td><td>村民交易</td></tr>
-<tr><td>更多实用功能</td><td>utilitypp 1.1</td><td>自动种植|漂白|随机方块|箱子整理</td></tr>
-<tr><td>台阶加强</td><td>improve_slabs 1.0</td><td>混合台阶|竖台阶</td></tr>
+<tr><td>更多实用功能</td><td>utilitypp 1.1</td><td>自动种植|漂白|随机方块|箱子整理|混合台阶|竖台阶</td></tr>
 <tr><td>空域开端</td><td>block_sky_domain 1.0</td><td>空岛基础进展</td></tr>
 </tbody></table>
 <p>下载地址（测试版v1.8-m07d27）：</p>
@@ -118,8 +117,13 @@
 
 
 <h3 id="acknowledge">致谢</h3>
-<p>感谢<a href="http://www.mcbbs.net/?1367981">天狼星black</a>(材质绘制)、<a href="http://www.mcbbs.net/?1963599">pineapple_</a>(世界生成)、<a href="http://www.mcbbs.net/?160123">贰逼</a>(头饰、随机模块)、the Eternal Celestial Star、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?582040">chyx</a>、<a href="https://github.com/ustc-zzzz">zzzz_ustc</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>, <a href="https://github.com/switefaster">switefaster</a>以及所有提过建议和意见的玩家和<a href="https://www.mcmod.cn/">MCMOD百科</a>, <a href="http://www.mcbbs.net/group-546-1.html">CBL</a>(Command Block Logic)、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>(The Command's Power)、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>(Cherry Blossom V)、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>(Magic Amateur Group)等群组提供的意见和建议等, 感谢<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、盐等模组提供的灵感。</p>
+<p>感谢<a href="http://www.mcbbs.net/?1367981">天狼星black</a>(材质绘制)、<a href="http://www.mcbbs.net/?1963599">pineapple_</a>(世界生成)、<a href="http://www.mcbbs.net/?160123">贰逼</a>(头饰、随机模块)、the Eternal Celestial Star、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?582040">chyx</a>、<a href="https://github.com/ustc-zzzz">zzzz_ustc</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="https://github.com/switefaster">switefaster</a>、折君、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>以及所有提过建议和意见的玩家和<a href="https://www.mcmod.cn/">MCMOD百科</a>, <a href="http://www.mcbbs.net/group-546-1.html">CBL</a>(Command Block Logic)、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>(The Command's Power)、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>(Cherry Blossom V)、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>(Magic Amateur Group)等群组提供的意见和建议等, 感谢<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、盐等模组提供的灵感。</p>
 
+<p>感谢以下玩家对本模组的<a href="https://afdian.net/@ruhuasiyu">赞助</a>：</p>
+<ul>
+<li>落天望月</li>
+<li>switefaster</li>
+</ul>
 
 <!-------------------------------------------------------------------------------------------------->
 <h2 id="generation">自然生成</h2>
@@ -996,7 +1000,7 @@
 
 <h3 id="ghast_tear">恶魂之泪 (Ghast Tear)</h3>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><th>碱水</th><td>钻石+烈焰粉+地狱疣+<a href="#bionic_acid">生物酸</a>+<a href="#alkaloid">生物碱</a></td>
+<tr><th>恶魂之泪</th><td>钻石+烈焰粉+地狱疣+<a href="#bionic_acid">生物酸</a>+<a href="#alkaloid">生物碱</a></td>
 <td><span class="mcui"><span><span class="mcui_row"><span class="diamond" title="钻石">
 </span><span class="blaze_powder" title="烈焰粉">
 </span><span class="nether_wart" title="地狱疣">
@@ -1125,7 +1129,7 @@
 
 
 <h3 id="green_force_of_water">绿色水之力 (Green Force of Water)</h3>
-<p>右键放置一格水。<span style="font-style:itapc;">Surrare Lilpana!</span></p>
+<p>右键放置一格水，在下界亦可正常使用。<span style="font-style:itapc;">Surrare Lilpana!</span></p>
 <p>绿色水之力可以在<a href="#all_in_one_machine">多功能一体机</a>低温高压下将水瓶变为冰，低温低压下将水瓶变为雪块。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>绿色水之力</th><td>仙人掌绿+红石+<a href="#heart_of_ocean">海洋之心</a></td><td><span class="mcui"><span>
@@ -1813,15 +1817,15 @@
 <h3 id="crops_and_hybrid">农作物与杂交</h3>
 <p>
 新增20种作物，需种植在耕地上，成熟后收割可获得相应作物。作物不受时运影响，且不可用骨粉催熟。</p>
-<p>前5种作物在收割小麦等作物时各有1.56%几率获得，后面15种需杂交获得。当作物与相邻的作物可杂交时，有3.13%的几率会产生新品种。</p>
+<p>所有作物均需杂交获得。当作物与相邻的作物可杂交时，有5%的几率会产生新品种。</p>
 
 <table><thead><tr><th>种子</th><th>收割/杂交来源</th><th colspan="2">作物</th></tr></thead><tbody>
 <tr><td><strong>彼岸花 (Lycoris Radiata)</strong></td><td>小麦、甜菜根</td><td>玫瑰红</td><td rowspan="10">0~3</td></tr>
-<tr><td><strong>白车轴 (Trifolium)</strong></td><td>小麦、马铃薯</td><td>骨粉</td></tr>
-<tr><td><strong>黑荆棘 (Blackthorn)</strong></td><td>甜菜根、胡萝卜</td><td>墨囊</td></tr>
-<tr><td><strong>香蒲草 (Cattail)</strong></td><td>甜菜根、马铃薯</td><td>蒲公英黄</td></tr>
-<tr><td><strong>金盏花 (Marigold)</strong></td><td>胡萝卜、马铃薯</td><td>橙色染料</td></tr>
-<tr><td><strong>木槿花 (Hibiscus)</strong></td><td>小麦、胡萝卜</td><td>粉红色染料</td></tr>
+<tr><td><strong>白车轴 (Trifolium)</strong></td><td>小麦+马铃薯</td><td>骨粉</td></tr>
+<tr><td><strong>黑荆棘 (Blackthorn)</strong></td><td>甜菜根+胡萝卜</td><td>墨囊</td></tr>
+<tr><td><strong>香蒲草 (Cattail)</strong></td><td>甜菜根+马铃薯</td><td>蒲公英黄</td></tr>
+<tr><td><strong>金盏花 (Marigold)</strong></td><td>胡萝卜+马铃薯</td><td>橙色染料</td></tr>
+<tr><td><strong>木槿花 (Hibiscus)</strong></td><td>小麦+胡萝卜</td><td>粉红色染料</td></tr>
 <tr><td><strong>风信子 (Hyacinth)</strong></td><td>彼岸花+黑荆棘</td><td>青金石</td></tr>
 <tr><td><strong>菖蒲草 (Calamus)</strong></td><td>彼岸花+风信子</td><td>紫色染料</td></tr>
 <tr><td><strong>滇百合 (Wild Lilium)</strong></td><td>香蒲草+金盏花</td><td>黄绿色染料</td></tr>
@@ -1880,7 +1884,7 @@
 </tbody></table>
 
 <h3 id="wool_sapling">羊毛树树苗 (Wool Sapling)</h3>
-<p>羊毛树树叶为不同的羊毛搭配树叶而成，树干为白桦树，和<a href="#wool_tree">天然生成</a>的一样。可用骨粉催熟。</p>
+<p>羊毛树树苗种下并长大后，每隔一段时间树叶会转化为一种羊毛，和<a href="#wool_tree">天然生成</a>的一样。可用骨粉催熟。</p>
 
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>	
 <tr><th>羊毛树树苗</th>
@@ -3660,7 +3664,7 @@
 
 <tr class="v1-8">
 	<th rowspan="90">1.8<br/><span class="lore">元素更新</span></th>
-	<th rowspan="90">2018年8月20日<br/><span class='lore'>1109 KB</span></th>
+	<th rowspan="90">2018年8月20日<br/><span class='lore'>1490 KB</span></th>
 	<td>游戏本体版本升级为1.13，不再支持1.13之前的版本。</td></tr>
 <tr class="v1-8"><td>修改资源包文字的代码名称、记分板、标签前缀为cpp，修改资源包以适应1.13，添加材质。</td></tr>
 <tr class="v1-8"><td>移除闪烁标语。</td></tr>
@@ -3805,20 +3809,20 @@
 </td></tr>
 
 <tr><td style="width:90px;text-align:right;background-color:#ddd;font-weight:bold;">机器</td><td>
-  <a href="#crafting_machine"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -0px -96px;" class="colorful_items"></span>合成器</a> 
-· <a href="#all_in_one_machine"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -16px -96px;" class="colorful_items"></span>多功能一体机</a> 
-· <a href="#trade_machine"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -32px -96px;" class="colorful_items"></span>交易机</a> 
-· <a href="#recipe_shower"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -48px -96px;" class="colorful_items"></span>配方显示器</a> </td></tr>
+  <a href="#crafting_machine"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -0px -32px;" class="colorful_items"></span>合成器</a> 
+· <a href="#all_in_one_machine"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -16px -32px;" class="colorful_items"></span>多功能一体机</a> 
+· <a href="#trade_machine"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -32px -32px;" class="colorful_items"></span>交易机</a> 
+· <a href="#recipe_shower"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -48px -32px;" class="colorful_items"></span>配方显示器</a> </td></tr>
 
 <tr><td style="width:90px;text-align:right;background-color:#ddd;font-weight:bold;">插件</td><td>
-  <a href="#empty_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -64px -96px;" class="colorful_items"></span>空白插件</a> 
-· <a href="#low_temperature_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -80px -96px;" class="colorful_items"></span>低温插件</a> 
-· <a href="#low_pressure_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -96px -96px;" class="colorful_items"></span>低压插件</a> 
-· <a href="#high_temperature_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -112px -96px;" class="colorful_items"></span>高温插件</a> 
-· <a href="#high_pressure_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -128px -96px;" class="colorful_items"></span>高压插件</a>
-· <a href="#cobblestone_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -0px -112px;" class="colorful_items"></span>圆石插件</a> 
-· <a href="#stone_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -16px -112px;" class="colorful_items"></span>石头插件</a> 
-· <a href="#obsidian_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -32px -112px;" class="colorful_items"></span>黑曜石插件</a>
+  <a href="#empty_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -64px -32px;" class="colorful_items"></span>空白插件</a> 
+· <a href="#low_temperature_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -80px -32px;" class="colorful_items"></span>低温插件</a> 
+· <a href="#low_pressure_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -96px -32px;" class="colorful_items"></span>低压插件</a> 
+· <a href="#high_temperature_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -112px -32px;" class="colorful_items"></span>高温插件</a> 
+· <a href="#high_pressure_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -128px -32px;" class="colorful_items"></span>高压插件</a>
+· <a href="#cobblestone_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -0px -48px;" class="colorful_items"></span>圆石插件</a> 
+· <a href="#stone_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -16px -48px;" class="colorful_items"></span>石头插件</a> 
+· <a href="#obsidian_plugin"><span style="display:inline-block;width:16px;height:16px;background-size:144px 192px;background-position: -32px -48px;" class="colorful_items"></span>黑曜石插件</a>
 </td></tr>
 
 <tr><td style="width:90px;text-align:right;background-color:#ddd;font-weight:bold;">掉落物</td><td>
