修复杂交和种子掉落的错误 修复世界生成的错误 添加石头变种至连锁挖掘 取消了连锁斧头的范围限制

--- a/index.html
+++ b/index.html
@@ -2051,7 +2051,7 @@
 
 <p>每件物品只可附加一种效果。效果可重复附加，之前的效果将会被覆盖。</p>
 <p>盔甲效果在对应槽位生效，剑和工具在主手生效，每秒消耗1点经验值，重复的效果不会叠加但消耗的经验值会叠加。使用<a href="#temperancer">节制器</a>可开启/关闭所有效果。</p>
-<p>连锁无消耗。玩家拥有连锁效果时，使用斧可一次性破坏相连的树、瓜、成熟的农作物，使用镐可一次性破坏相连的矿石和黑曜石，使用锹可一次性8米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
+<p>连锁无消耗且不显示状态效果。玩家拥有连锁效果时，使用斧可一次性破坏相连的树、瓜、成熟的农作物，使用镐可一次性破坏10米内相连的矿石和黑曜石，使用锹可一次性10米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
 
 <h4 id="attribute_adding">属性附加</h4>
 <ul>
