修复空书架的bug 修复图腾柱特定高度的bug 复合台阶碰撞箱现在在上半部分了 更新赞助名单

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 <tr><td>更多实用功能</td><td>utilitypp 1.1</td><td>自动种植|漂白|随机方块|箱子整理|混合台阶|竖台阶</td></tr>
 <tr><td>空域开端</td><td>block_sky_domain 1.0</td><td>空岛基础进展</td></tr>
 </tbody></table>
-<p>下载地址（测试版v1.8-m08d05）：</p>
+<p>下载地址（测试版v1.8-m08d06）：</p>
 <ul>
-<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d05.zip">https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d05.zip</a></li>
-<li><a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d05.zip">http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d05.zip</a></li>
+<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d06.zip">https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d06.zip</a></li>
+<li><a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d06.zip">http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d06.zip</a></li>
 </ul>
 
 
@@ -123,13 +123,14 @@
 <ul>
 <li>落天望月</li>
 <li>switefaster</li>
+<li>chyx</li>
 </ul>
 
 <!-------------------------------------------------------------------------------------------------->
 <h2 id="generation">自然生成</h2>
 <p>新增26项进度，完成进度会给予玩家经验、物品或状态效果。</p>
 <h3 id="wool_tree">羊毛树 (Wool Tree)</h3>
-<p>天然生成在主世界的任意有草方块的群系的地表。羊毛树的形状与桦树相同，树干为桦木，树叶为16种羊毛的任意两种。</p>
+<p>天然生成在主世界的任意有草方块的群系的地表。羊毛树的形状与桦树相同，树干为桦木，树叶为16种羊毛的任意组合。</p>
 
 <h3 id="creeper_dungeon">爬行者地牢 (Creeper Dungeon)</h3>
 <p>天然生成在主世界的地下y=20附近。与其它地牢类似，爬行者地牢是一个由圆石和苔石构成的小房间，包含苦力怕刷怪箱和地牢宝箱。</p>
@@ -1940,7 +1941,7 @@
 <span class="colorful_items star_wand" title="星之杖">
 </span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span></span></td></tr>
 </tbody></table>
-<p>附魔金锭和附魔铁锭的位置可互换。封印之杖的魔法等级为2。</p>
+<p>日之碎片和月之碎片的位置可互换。星之杖的魔法等级为2。</p>
 
 <h3 id="dream_wand">梦之杖 (Dream Wand)</h3>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>	
@@ -1958,7 +1959,7 @@
 <span class="colorful_items dream_wand" title="梦之杖">
 </span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span></span></td></tr>
 </tbody></table>
-<p>附魔金锭和附魔铁锭的位置可互换。封印之杖的魔法等级为3。</p>
+<p>龙蛋和下界之星的位置可互换。梦之杖的魔法等级为3。</p>
 
 <h3 id="temperancer">节制器 (Temperancer)</h3>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>	
@@ -2656,7 +2657,7 @@
 </tbody></table>
 
 <h3 id="mix_slabs">复合台阶</h3>
-<p>如果一个台阶位于一个格子的底部，我们用另一台阶右击其顶部即可将二者复合。实际上该格只有一个台阶，因此诸如光照、水能影响如常。破坏底部的台阶即可掉落。</p>
+<p>如果一个台阶位于一个格子的底部，我们用另一台阶右击其顶部即可将二者复合。该位置仅上半部分有方块。破坏上半台阶后下半台阶会保留，无法直接破坏下半台阶。</p>
 
 <h3 id="vertical_slabs">竖台阶</h3>
 <p>使用台阶右击铁栏杆的侧面即可将台阶安装至铁栏杆上，破坏铁栏杆即可掉落。</p>
